--- a/TALLERES/TALLER_6/formulario.html
+++ b/TALLERES/TALLER_6/formulario.html
@@ -15,6 +15,9 @@
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required><br><br>
 
+        <label for="fecha_nacimiento">Fecha de Nacimiento:</label>
+        <input type="date" id="fecha_nacimiento" name="fecha_nacimiento" required><br><br>
+
         <label for="edad">Edad:</label>
         <input type="number" id="edad" name="edad" required><br><br>
 
